Update Image Cropper widget, solving issue and making it MX6 ready

--- a/src_widget/cropper/widget/ui/cropper.css
+++ b/src_widget/cropper/widget/ui/cropper.css
@@ -27,3 +27,16 @@
 .jcrop-dark .jcrop-handle{-moz-border-radius:3px;-webkit-border-radius:3px;background-color:#FFF;border-color:#000;border-radius:3px;}
 .solid-line .jcrop-vline,.solid-line .jcrop-hline{background:#FFF;}
 .jcrop-holder img,img.jcrop-preview{max-width:none;}
+
+.ImageCropper div {
+	z-index: auto !important;
+}
+
+.ImageCropper .jcrop-holder,
+.ImageCropper .jcrop-holder div {
+	z-index: 2 !important;
+}
+
+.ImageCropper div.jcrop-tracker {
+	z-index: 1 !important;
+}
